--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "expo": "^46.0.0",
+    "expo-updates": "~0.14.5",
     "react": "18.1.0",
     "react-native": "0.70.1"
   },
